# imzx-agent-sdk

./: .dockerignore  .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_PLAN.md  Dockerfile  FEATURES.md  LICENSE  PATHNOTES.md  README.md  ROADMAP.md  RUST_CORE_AUDIT.md  SECURITY_AUDIT.md  USE_CASES.md  claude_bridge.py  docker-compose.yml  package-lock.json  package.json  setup.sh  test.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: evals.yml  main.yml  napi-build.yml  test.yml
adapters/llm/: model-fetcher.ts
adapters/memory/: agent-brain.ts  agent-evaluator.ts  context-summarizer.ts  conversation-checkpoint.ts  embeddings.ts  knowledge-graph.ts  persistent-memory.ts  reflection-engine.ts  self-modifier.ts  skill-manager.ts
adapters/persistence/: file-persona-repository.ts
adapters/security/: auth-manager.ts  policy-engine.ts
adapters/tools/: agent-lifecycle.ts  agent-logger.ts  auth-manager.ts  cost-planner.ts  cua-browser.ts  dspy-optimizer.ts  eval-runner.ts  event-logger.ts  git-context.ts  git-tools.ts  hitl-manager.ts  llm-judge.ts  mcp-server-mode.ts  mcp-server.ts  orchestration.ts  output-guard.ts  playwright-mcp.ts  plugin-system.ts  project-context.ts  prompts.ts  rag-pipeline.ts  security-guardrails.ts  semantic-cache.ts  slm-router.ts  structured-output.ts  telemetry.ts  tool-executor.ts  topology.ts  trace-collector.ts  tracing.ts  workflow-engine.ts
app/python-cli/: main.py  requirements.txt  test_binding.py  test_integration.py  test_orchestration.py
app/typescript-cli/: index.ts  package.json  test_binding.ts
application/: agent-service.ts  index.ts
application/use-cases/: get-persona.ts
bindings/typescript/: package-lock.json  package.json
bindings/typescript/core/: Cargo.toml
bindings/typescript/core/src/: lib.rs
core/: Cargo.toml
core/src/: agent.rs  context_manager.rs  embedding.rs  error.rs  hooks.rs  lib.rs  llm.rs  memory.rs  orchestration.rs  strategy.rs  streaming.rs  subagent.rs  tools.rs  types.rs
core/src/provider/: mod.rs
docs/: FULL_AUDIT_v0.7.0.md  V0.8_IMPLEMENTATION_PLAN.md  architecture.md  openapi.yaml
domain/personas/: README.md  general-purpose.json  index.ts  repository.ts  types.ts
domain/ports/: agent-engine.ts
interfaces/api/: server.ts
interfaces/cli/: auth-command.ts  cli-handler.ts
interfaces/dashboard/: server.ts
interfaces/sdk/: index.ts
interfaces/sdk/python/: imzx.py
personas/: code-reviewer.json  general-purpose.json  security-auditor.json
python/: basic.py  cli.py  coding.py  hello.py  pyproject.toml  test_agents.py
python/examples/: basic.py  coding.py  hello.py
scripts/: build-binary.sh  commit-v060.sh  commit-v062.sh  deploy_and_test.sh  install.sh
tests/: knowledge-graph.test.ts  persistent-memory.test.ts  reflection-engine.test.ts  security-modules.test.ts  skill-manager.test.ts  tool-executor.test.ts
typescript/: .npmignore  execFileNoThrow.test.ts  mcp-config.json  package-lock.json  package.json  tsconfig.json
typescript/examples/: basic.ts  coding.ts  hello.ts
typescript/imzx/python/: basic.py  coding.py  hello.py
typescript/imzx/typescript/src/: basic.ts  coding.ts  hello.ts  index.ts
typescript/src/: basic.ts  buggy_file.ts  cli.ts  coding.ts  e2e-test.ts  hello.ts  index.ts
typescript/src/tools/: filesystem.ts  search.ts  types.ts
typescript/src/utils/: execFileNoThrow.ts  safeResolve.ts
