[package]
name = "imzx-core"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
napi = { version = "2.12", features = ["tokio_rt"] }
napi-derive = "2.12"
tokio = { version = "1", features = ["full"] }
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.19"
thiserror = "1.0"
candle-core = "0.10"

[dev-dependencies]
tokio-test = "0.4"
