[package]
name = "imzx-core"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# [L1 FIX] All dependencies pinned to exact versions
pyo3 = { version = "=0.22.6", features = ["extension-module"] }
napi = { version = "=2.12.4", features = ["tokio_rt"] }
napi-derive = "=2.12.3"
tokio = { version = "=1.38.0", features = ["full", "sync"] }
once_cell = "=1.19.0"
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
tracing = "=0.1.40"
anyhow = "=1.0.86"
async-trait = "=0.1.80"
reqwest = { version = "=0.11.27", features = ["json"] }
scraper = "=0.19.0"
thiserror = "=1.0.61"
candle-core = "=0.10.0"
# [H5 FIX] Secret management — API keys zeroized on drop
secrecy = "=0.10.0"
zeroize = { version = "=1.8.1", features = ["alloc"] }
# v0.3.0 additions — hooks, subagents, streaming, context management
chrono = { version = "=0.4.38", features = ["serde"] }
futures = "=0.3.30"

[dev-dependencies]
tokio-test = "=0.4.4"
