[package]
name = "imzx-core"
version = "0.6.0"
edition = "2021"
description = "imzx-agent-sdk Rust core — NAPI-RS bindings for TypeScript"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi-binding"]
napi-binding = ["napi", "napi-derive"]
python-binding = ["pyo3"]

[dependencies]
# Core
serde = { version = "=1.0.203", features = ["derive"] }
serde_json = "=1.0.117"
anyhow = "=1.0.86"
thiserror = "=1.0.61"
async-trait = "=0.1.80"
chrono = { version = "=0.4.38", features = ["serde"] }
zeroize = { version = "=1.8.1", features = ["alloc"] }
secrecy = "=0.10.0"

# Async runtime
tokio = { version = "=1.38.0", features = ["full", "sync"] }
futures = "=0.3.30"

# HTTP + scraping (tools module)
reqwest = { version = "=0.11.27", features = ["json"] }
scraper = "=0.19.0"

# NAPI-RS bindings (optional, default)
napi = { version = "2.12", features = ["tokio_rt"], optional = true }
napi-derive = { version = "2.12", optional = true }

# PyO3 bindings (optional, opt-in)
pyo3 = { version = "=0.22.6", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio-test = "=0.4.4"
