[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imzx-agent-py"
version = "1.0.0"
description = "A professional-grade Claude Agent SDK framework in Python"
dependencies = [
    "claude-agent-sdk",
]
requires-python = ">=3.10"
scripts = {
    "imzx-agent-py = 'imzx.cli:main'"
}

[project.urls]
"Homepage" = "https://github.com/your-username/imzx"
