[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imzx-agent-py"
version = "1.0.0"
description = "A professional-grade Claude Agent SDK framework in Python"
dependencies = [
    "claude-agent-sdk",
    "python-dotenv",
]
requires-python = ">=3.10"

[project.scripts]
imzx-agent-py = "imzx.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
"Homepage" = "https://github.com/iamzulx/imzx-agent-sdk"
